add swwager api documnetation to the member end points
